added demo for recursive routing

--- a/x-router/demo/recursive.html
+++ b/x-router/demo/recursive.html
@@ -32,6 +32,8 @@
                     <x-test x-route="import">
                         <h1>Import</h1>
                         <p> Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text by the name of Lorem Ipsum decided to leave for the far World of Grammar. The Big Oxmox advised her not to do so, because there were thousands of bad Commas, wild Question Marks and devious Semikoli, but the Little Blind Text didn’t listen. </p>
+                        <div x-route="recursive">This is recursive content #2</div>
+                        <div x-route="">This is recursive content #1</div>
                         <a href="backup">&raquo; backup</a>
                         <a x-href="backup"> TEST </a>
                     </x-test>
