references; remove screens we won't need anymore

--- a/x-address-file-input/demo/index.html
+++ b/x-address-file-input/demo/index.html
@@ -5,14 +5,14 @@
     <title>x-address-file-input demo</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <link href="../x-address-file-input.css" rel="stylesheet">
-    <link href="../../x-toast/x-toast.css" rel="stylesheet">
+    <link href="../../../secure-elements/x-toast/x-toast.css" rel="stylesheet">
 </head>
 
 <body>
     <x-address-file-input></x-address-file-input>
     <script type="module">
         import XAddressFileInput from "../x-address-file-input.js";
-        import XToast from "../../x-toast/x-toast.js";
+        import XToast from "../../../secure-elements/x-toast/x-toast.js";
         const $input = new XAddressFileInput();
         $input.addEventListener('x-address-file-input', e => XToast.show(`${e.type}: ${e.detail}`));
     </script>
