--- a/x-accounts/demo/index.html
+++ b/x-accounts/demo/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <link href="/libraries/nimiq-style/nimiq-style.css" rel="stylesheet">
-    <link href="/elements/x-toast/x-toast.css" rel="stylesheet">
+    <link href="/secure-elements/x-toast/x-toast.css" rel="stylesheet">
     <link href="../x-accounts.css" rel="stylesheet">
     <link href="../x-accounts-dropdown.css" rel="stylesheet">
 
@@ -26,7 +26,7 @@
     <script type="module">
     import XAccounts from '../x-accounts.js';
     import XAccountsDropdown from '../x-accounts-dropdown.js';
-    import XToast from '../../x-toast/x-toast.js';
+    import XToast from '../../../secure-elements/x-toast/x-toast.js';
     window.$accounts = new XAccounts();
     window.$accountsDropdown = new XAccountsDropdown();
     const demoAccounts = [
