--- a/x-address/demo/index.html
+++ b/x-address/demo/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <x-address></x-address>
-    <script type="module" src="./index.js"></script>
+    <script type="module" src="index.js"></script>
 </body>
 
 </html>
