--- a/x-accounts/demo/x-account.html
+++ b/x-accounts/demo/x-account.html
@@ -18,22 +18,35 @@
         x-card {
             display: block;
             width: 100%;
-            max-width: 510px;
-            border: 1px solid rgb(220, 220, 220);
+            max-width: 530px;
             border-radius: 0.4em;
             padding: 1em;
-            margin: 1em auto;
+            margin: 0.5em;
             background: white;
-            box-shadow: 0px 10px 20px -15px grey;
+            box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14),
+            0 1px 5px 0 rgba(0, 0, 0, 0.12),
+            0 3px 1px -2px rgba(0, 0, 0, 0.2);
         }
 
         x-card h2 {
-            margin-bottom: 0.5em;
+            margin-bottom: 15px;
+            text-transform: uppercase;
+            letter-spacing: 0.16em;
+            font-size: 13px;
+            font-weight: bold;
+        }
+
+        x-card hr {
+            border: 0;
+            height: 1px;
+            background: rgba(0, 0, 0, 0.1);
+            margin: 0;
         }
 
         @media (min-width: 480px) {
             x-card {
-                padding: 1.5em 2em;
+                padding: 24px ;
+                margin: 16px;
             }
         }
 
