Restyle transaction modal

--- a/x-transactions/demo/x-transactions.html
+++ b/x-transactions/demo/x-transactions.html
@@ -63,6 +63,7 @@
             <x-transaction></x-transaction>
             <x-transaction></x-transaction>
             <x-transaction></x-transaction>
+            <x-transaction></x-transaction>
         </x-transactions-list>
     </x-card>
 
@@ -73,20 +74,20 @@
         const demoTransactions = [
             {
                 sender: 'NQ57 2CTN 72AK GR4K P6FC 46HS SRPU MTF3 0AXF',
-                senderLabel: 'Little Green Punk',
+                senderLabel: 'Green Mustaccio',
                 recipient: 'NQ77 X5GR VCE5 AQYB J3YJ VE7V 15L2 8EXY ECYU',
                 recipientLabel: 'NQ77 X5GR VCE5...',
                 type: 'outgoing',
                 value: 238.12,
-                fee: 0,
+                fee: 0.01,
                 blockHeight: 34521,
                 timestamp: 1521411029,
-                hash: 'kjasodifjap0893jaio3jpai23fap0iw',
+                hash: 'hash_01',
                 currentHeight: 35422,
             },
             {
                 recipient: 'NQ57 2CTN 72AK GR4K P6FC 46HS SRPU MTF3 0AXF',
-                recipientLabel: 'Little Green Punk',
+                recipientLabel: 'Green Mustaccio',
                 sender: 'NQ77 X5GR VCE5 AQYB J3YJ VE7V 15L2 8EXY ECYU',
                 senderLabel: 'NQ77 X5GR VCE5...',
                 type: 'incoming',
@@ -94,12 +95,12 @@
                 fee: 0,
                 blockHeight: 34352,
                 timestamp: 1521311029,
-                hash: 'kjasodifjap0893jaio3jpai23fap0ib',
+                hash: 'hash_02',
                 currentHeight: 35422,
             },
             {
                 recipient: 'NQ57 2CTN 72AK GR4K P6FC 46HS SRPU MTF3 0AXF',
-                recipientLabel: 'Little Green Punk',
+                recipientLabel: 'Green Mustaccio',
                 sender: 'NQ77 X5GR VCE5 AQYB J3YJ VE7V 15L2 8EXY ECYU',
                 senderLabel: 'NQ77 X5GR VCE5...',
                 type: 'incoming',
@@ -107,10 +108,23 @@
                 value: 238.12,
                 fee: 0,
                 blockHeight: 34321,
-                timestamp: 1521311029,
-                hash: 'kjasodifjap0893jaio3jpai23fapasdlfja',
+                timestamp: 1521211029,
+                hash: 'hash_03',
                 currentHeight: 35422,
-            }
+            },
+            {
+                recipient: 'NQ57 2CTN 72AK GR4K P6FC 46HS SRPU MTF3 0AXF',
+                recipientLabel: 'Green Mustaccio',
+                sender: 'NQ73 B5F1 4FYR MG1K 3NF4 N1QS L32A EANM 537H',
+                senderLabel: 'Pilz-Hotline',
+                type: 'transfer',
+                value: 438.12,
+                fee: 0,
+                blockHeight: 34045,
+                timestamp: 1521111029,
+                hash: 'hash_04',
+                currentHeight: 35422,
+            },
         ];
         window.demoTransactions = demoTransactions;
 
