x-ledger-ui: first somewhat working attempt to work around ledger timeouts

--- a/x-ledger-ui/demo/index.html
+++ b/x-ledger-ui/demo/index.html
@@ -46,7 +46,7 @@
 <h3>Transaction to sign:</h3>
 <textarea>
     {
-        "sender": "NQ09 AUXT TVM7 T0UJ BT7G P802 5AD8 DJDX 7G41",
+        "sender": "NQ92 RACJ P0K0 GG7H QVJK 8YS7 2P13 EUL9 RJYG",
         "recipient": "NQ63 B0E0 J7PL UM2D 5PNK 6JME 0DSM 18D4 V8U5",
         "value": 3.14,
         "fee": 0.01,
