Fix account icon positioning

--- a/x-accounts/demo/x-account.html
+++ b/x-accounts/demo/x-account.html
@@ -59,11 +59,13 @@
 <body>
     <x-card class="nimiq-dark">
         <h2>Your Accounts</h2>
-        <x-account></x-account>
-        <x-account></x-account>
-        <x-account></x-account>
-        <x-account></x-account>
-        <x-account></x-account>
+        <x-accounts-list>
+            <x-account></x-account>
+            <x-account></x-account>
+            <x-account></x-account>
+            <x-account></x-account>
+            <x-account></x-account>
+        </x-accounts-list>
     </x-card>
 
     <script type="module">
