replace passphrase by password

--- a/x-transactions/foo.html
+++ b/x-transactions/foo.html
@@ -1,5 +1,5 @@
 <h1>Authorize Transaction</h1>
-<h2>Enter your passphrase below to authorize this transaction:</h2>
+<h2>Enter your password below to authorize this transaction:</h2>
 
 <div class="transaction">
     <div class="center">
